tests/asm-link/divzero-instr/rgbasm.err
error: division by zero
   ╭─[ test.asm:2:11 ]
   │
 2 │     ld  a, 1/0
   │              ┬  
   │              ╰── this is equal to zero
───╯
1 error generated.
